--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-
+import Ham from "./Ham.astro"
 ---
 
 <header>
@@ -12,6 +12,7 @@
       <li><a href="">Home</a></li>
     </ul>
   </nav>
+  <Ham/>
 </header>
 
 <style>
