--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import MainLayout from "../layouts/mainLayout.astro"
+import Slider from "../components/Slider.astro"
+
 ---
 
 <MainLayout>
-	<h1>Main Layout</h1>
+	<Slider></Slider>
 </MainLayout>
 
