--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -8,12 +8,15 @@ const {title} = Astro.props
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/src/css/main.css">
   <title>CNEM | {title}</title>
 </head>
 <body>
-  <Header />
+  <script is:inline src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"/>
   
+  <Header />
   <slot />
+
 </body>
 </html>
