--- a/src/components/CardSlider.astro
+++ b/src/components/CardSlider.astro
@@ -1,96 +1,21 @@
 ---
-const {id} = Astro.props
-
+const {title, src} = Astro.props
 
 ---
+<div class="swiper-slide">
+  <img src={src} alt={title}>
+</div>
 
-<input type="radio" name="a" id={id}/>
-  <label for={id} style="--hue: 210"></label>
-  <div class="ci" style="--z: 1">
-    <h2 class="ch" style="--h: 210; --s: 70%; --l: 90%">Above looks beautiful?</h2>
-    <img src="https://images.unsplash.com/photo-1488831948116-38bc1351c6d6?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=500&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=700" alt="Sky and mountains">
-  </div>
-
-
-  <style>
-    
-  
-  .ci {
-    position: absolute;
-    top: 0;
-    left: 0;
-  
-    
-    transform-origin: left 50%;
-  
-    background: inherit;
+<style>
+  .swiper-slide{
     width: 100%;
     height: 100%;
-    z-index: var(--z);
-    transition: .3s ease-out;
   }
-  
-  .ci img {
+
+  img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    -moz-user-select: none;
-    user-select: none;
+    object-position: center;
   }
-  
-  .ch {
-    position: absolute;
-    top: 70%;
-    left: 4%;
-    transform: translateY(-50%);
-  
-    font-size: 2rem;
-    color: hsla(var(--h) var(--s) var(--l) / .8);
-    text-shadow: 0 2px 10px hsla(var(--h) var(--s) 10% / .3);
-  }
-  
-  input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    z-index: -10;
-  }
-  
-  label {
-    width: 10%;
-    height: 10px;
-    margin-right: 4px;
-    border-radius: 20px;
-  
-    background: hsla(0 0% 90% / .3);
-    cursor: pointer;
-  
-    position: relative;
-    z-index: 10;
-  }
-  
-  label:last-child {
-    margin-right: 0;
-  }
-  
-  input:checked+label {
-    background: linear-gradient(to right,
-      hsla(var(--hue) 80% 70% / .7),
-      hsla(calc(var(--hue) + 30) 80% 50% / .7));
-  }
-  
-  input:not(:checked)+label+.ci {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  
-  input:checked+label+.ci~.ci {
-    transform: translateX(100%);
-  }
-  
-  input:not(:checked)+label+.ci {
-    transition: 0;
-  }
-  
-  </style>
+</style>
