--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,20 +5,28 @@ import Ham from "./Ham.astro"
 <header>
   <nav>
     <div class="logo">
-      <img src="/public/assets/Logo.svg" alt="Logo">
+      <img src="/public/assets/Logo.png" alt="Logo">
     </div>
-    <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">Home</a></li>
+    <ul id="navmenu">
+      <li><a href="/">Inicio</a></li>
+      <li><a href="">Cursos</a></li>
+      <li><a href="">Acerca</a></li>
     </ul>
+    <Ham/>
   </nav>
-  <Ham/>
 </header>
 
 <style>
   header{
     max-width: 100%;
     height: 8rem;
+  }
+
+  .logo{
+    height: 100%;
+    & img{
+      height: 100%;
+    }
   }
   
   nav{
@@ -30,17 +38,55 @@ import Ham from "./Ham.astro"
     align-items: center;
   }
 
-  .logo{
-    height: 80%;
-    & img{
-      height: 100%;
+  ul{
+    position: absolute;
+    gap: 3rem;
+    background-color: white;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    height: 100dvh;
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s ease-in-out;
+    margin-inline: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12 px;
+    align-content: center;
+    flex-direction: column;
+    
+    & li{
+      text-align: center;
+    }
+
+    & a{
+      max-width: 200px;
+      min-width: 120px;
+      padding: 12px 18px;
+      font-size: 2rem;
+      transition: all 0.75s ease;
+    }
+
+    & a:hover{
+      background-color: pink;
     }
   }
 
-  ul{
-    display: flex;
-    gap: 3rem;
+  .show-menu{
+    left: 0;
+    transition: all 0.5s ease-in-out;
   }
 
 
+  @media (min-width: 768px) {
+    nav ul{
+      display: flex;
+      position: relative;
+    }
+  }
+
 </style>
+
+<script type="module" src="/src/js/hambutton.js"></script>
