--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,3 +13,12 @@ html{
   font-size: 62.5%;
 }
 
+li{
+  list-style: none;
+  font-family: inherit;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
