--- a/src/components/CardSlider.astro
+++ b/src/components/CardSlider.astro
@@ -1,21 +1,68 @@
 ---
-const {title, src} = Astro.props
+import BtnCon from "./BtnCon.astro"
+const {title, src, dat_start, desc} = Astro.props
 
 ---
-<div class="swiper-slide">
-  <img src={src} alt={title}>
-</div>
+<article class="swiper-slide" style={`background-image: url(${src});`}>
+  <div class="swiper-content">
+
+    <h2>{title}</h2>
+    <p>{`${dat_start? "Fecha de Inicio: " + dat_start : desc }`}</p>
+    <BtnCon/>
+  </div>
+</article>
 
 <style>
   .swiper-slide{
     width: 100%;
     height: 100%;
-  }
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    
+    padding: 10% 10%;
 
-  img{
+    color: white;
+
+
+  }
+  .swiper-slide::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Ajusta la opacidad según necesites */
+    z-index: -1;
   }
+
+  .swiper-content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items:end;
+  }
+
+  h2{
+    width: 100%;
+    font-size: 3rem;
+  }
+  
+  p{
+    width: 100%;
+    font-size: 1.6rem;
+  }
+
+  @media (min-width: 768px){
+    h2{
+    font-size: 4.5rem;
+  }
+
+  p{
+    font-size: 2.4rem;
+  }
+  }
+  
 </style>
