--- a/src/components/Ham.astro
+++ b/src/components/Ham.astro
@@ -28,22 +28,25 @@
     #lines span{
       width: 100%;
       height: 0.65rem;
-      background: black;
+      background: white;
       border-radius: 3px;
-      transition: transform 0.75s ease;
+      transition: transform 0.75s ease-in-out;
     }
   
-    .line.active:nth-child(1){
+    #lines .line.active:nth-child(1){
       position:absolute;
       transform: rotate(135deg); 
+      background: var(--color-main);
     }
-    .line.active:nth-child(2){
+    #lines .line.active:nth-child(2){
       position:absolute;
       transform: scale(0); 
+      background: var(--color-main);
     }
-    .line.active:nth-child(3){
+    #lines .line.active:nth-child(3){
       position:absolute;
       transform: rotate(-135deg); 
+      background: var(--color-main);
     }
   
     
