--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -1,5 +1,7 @@
 ---
 import Header from "../components/Header.astro"
+import '../css/main.css'
+
 const {title} = Astro.props
 ---
 
@@ -9,7 +11,6 @@ const {title} = Astro.props
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-  <link rel="stylesheet" href="/src/css/main.css">
   <title>CNEM | {title}</title>
 </head>
 <body>
