cambio de rutas absolutas

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,16 +16,16 @@ import BtnCon from "./BtnCon.astro"
 
     <div class="hero-img-grid">
       <div class="hero-img img-1">
-        <img src="/public/assets/derecho.png" alt="imagen-hero-grid">
+        <img src="/assets/derecho.png" alt="imagen-hero-grid">
       </div>
       <div class="hero-img img-2">
-        <img src="/public/assets/informatica.png" alt="imagen-hero-grid">
+        <img src="/assets/informatica.png" alt="imagen-hero-grid">
       </div>
       <div class="hero-img img-3">
-        <img src="/public/assets/medicina.png" alt="imagen-hero-grid">
+        <img src="/assets/medicina.png" alt="imagen-hero-grid">
       </div>
       <div class="hero-img img-4">
-        <img src="/public/assets/arquitectura.png" alt="imagen-hero-grid">
+        <img src="/assets/arquitectura.png" alt="imagen-hero-grid">
       </div>
     </div>
   </article>
