--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,7 +3,7 @@
 ---
 
 <article class="logo">
-  <img src="/public/assets/Logo.png" alt="Logo" />
+  <img src="/assets/Logo.png" alt="Logo" />
   <div>
     <h2>CNEM</h2>
     <h3>Centro de Nivelación</h3>
