Archivos JS Movidos a public

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -98,5 +98,5 @@ import Logo from "./Logo.astro"
 
 </style>
 
-<script type="module" src="/src/js/hambutton.js"></script>
-<script type="module" src="/src/js/obsHeader.js"></script>
+<script type="module" src="/js/hambutton.js"></script>
+<script type="module" src="/js/obsHeader.js"></script>
