--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -14,7 +14,7 @@ const {title} = Astro.props
   <title>CNEM | {title}</title>
 </head>
 <body>
-  <script is:inline src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"/>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"/>
   
   <Header />
   
