ultima ruta cambiada

--- a/src/components/SliderCurs.astro
+++ b/src/components/SliderCurs.astro
@@ -36,4 +36,4 @@ import cursos from "../assets/data_courses.json"
 </style>
 
 
-<script type="module" src="/src/js/swiper_hero.js"></script>
+<script type="module" src="/js/swiper_hero.js"></script>
